   	--param=ssp-buffer-size=4 -mtune=generic'  ./configure --without-db --without-openssl

--1.75.50--

   +	Add support to smtp2 API to pass in the HELO argument, fix the
	logging, and add -e and -H options to smtp2 CLI for envelope
	testing and HELO argument.

   !	Fix socket3_client() handling of ETIMEOUT reporting.

--1.75.49--

   *	Upgraded SQLite to 3.9.2

   !	Updated TLD list.

   +	Add functions to read/write UTF8 file streams.

   +	Add string search functions based on Horspool, Sunday, and Smith.

   +	Add .onion to RFC2606 reserved list.

   +	Add basic err.h for Windows native.

   !	Fixed my version of cmp -l option to behave like normal cmp(1).

   !	Fix TokenNext handling of empty string from command line, ie. '\0'.

   !	Fixed option usage dump to allow for empty list items and handling
	of escaped semi-colon in a list item.

--1.75.48--

   +	Added pdqIgnoreTCP() and dns-ignore-tcp option for PDQ API.
   	pdq CLI now has -T option to disable TCP lookups.  Requested
   	by Alex Broens.

   !	When making a TCP query, assert the TC bit is off.

   !	Some cosmetic changes to PDQ logging.

--1.75.47--

   !	Modify makefiles and version.sh.in to correspond with recent
   	switch to acsite.m4 and renaming of some macros.

  !!	Fixed memory leak in pdqRootGetNS().

   !	Modified dnsListQueryNs() to use pdqRootGetNS() instead of
   	pdqRootGet().


--1.75.46--

   *	Upgraded SQLite to 3.8.10.2

   +	Added pdqListPruneSection().

   !	Modified pdqLog() to take a prefix string to improve log detail.

  !!	Fixed pdqInit() bug when the DNS server does not recurse and
  	we are using pdqSetShortQuery(1) to skip our own recursion.
  	Can't use pdqListPruneMatch() nor pdqListPrune() as it will
  	discard some or all of root_hints list.  pdqRootGetNS() will
  	fetch an NS's 5A records on-demand as needed, so an incomplete
  	root_hints is not critical.

  !!	Fixed pdqRootGetNS() to correctly handle "glue record" results